--- a/about.html
+++ b/about.html
@@ -5,13 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img src="assets/images/banner.png" alt="Banner">
+    </div>
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Our Locations</h2>
+        <ul>
+            <li>Downtown</li>
+            <li>Otay Ranch</li>
+            <li>La Jolla</li>
+            <li>La Mesa</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img src="assets/images/about.jpg" alt="Spices">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro nemo beatae, ipsa ut illum quaerat impedit consectetur. Cumque, animi voluptate et ratione aut veniam labore perferendis harum, voluptates vel dolorum.</p>
     </main>
 </body>
 </html>
